fix: increase color contrast on navbar toggle

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,4 +2,6 @@ $font-size-base: 16px;
 $blockquote-font-size: $font-size-base;
 $blockquote-small-color: #424242;
 $nav-link-hover-bg: #F3976C !important;
+$navbar-default-toggle-icon-bar-bg: #424242;
+$navbar-default-toggle-hover-bg: #000;
 $link-hover-color: #23527c;
