--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -56,6 +56,10 @@ address {
     padding: 40px 0;
 }
 
+.navbar-toggle {
+    color: #474747;
+}
+
 .next-lightbox, .prev-lightbox, .close-lightbox {
     background-color: #000;
     color: #fff !important;
